added separate express routes

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         map: {
             'mithril': '/mithril/mithril.min',
 			'j2c' : '/j2c/j2c.global.min',
-			'mithril-j2c' : '/mithril-j2c/j2c.global.min'
+			//'mithril-j2c' : '/mithril-j2c/j2c.global.min'
         },
     });
 
